--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
         margin: 0;
         padding: 0;
       }
+      :root {
+    font-family: 'Vazir', sans-serif !important;
+}
     </style>
   </head>
   <body>
