--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
       *{
         margin: 0;
         padding: 0;
+        font-family: 'Mulish', sans-serif;
       }
       :root {
     font-family: 'Vazir', sans-serif !important;
