--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,8 @@
       *{
         margin: 0;
         padding: 0;
-        font-family: 'Mulish', sans-serif;
+        font-family: 'Lato', sans-serif,'open-sans';
       }
-      :root {
-    font-family: 'Vazir', sans-serif !important;
-}
     </style>
   </head>
   <body>
